--- a/CSE3013/readme.me
+++ b/CSE3013/readme.me
@@ -1,4 +1,8 @@
 CSE3013 컴퓨터공학설계및실험1  
 1,2주차 : 리눅스  
 3,4주차 : c++  
-6,7,8주차 : 테트리스.
+6,7,8주차 : 테트리스.  
+9주차 : openframework  
+10주차 : waterfall  
+11~13주차 : 미로  
+최종 : 미로게임 구현
